--- a/02-pebble.yaml
+++ b/02-pebble.yaml
@@ -72,7 +72,7 @@ kind: Service
 metadata:
   name: pebble-svc
   labels:
-    app: pebble
+    name: pebble
 spec:
   type: NodePort
   ports:
@@ -97,4 +97,4 @@ spec:
     targetPort: 30502
     nodePort: 30502
   selector:
-    app: pebble
+    name: pebble
