OCTOPUS-584: update documentation and add timezone data to the dockerfile
Signed-off-by: Paul Bastide <pbastide@us.ibm.com>

--- a/02-pebble.yaml
+++ b/02-pebble.yaml
@@ -23,6 +23,9 @@ spec:
           imagePullPolicy: Always
           command: [ "/usr/bin/pebble" ]
           args: [ "-config", "/config/pebble-config.json" ]
+          env:
+          - name: PEBBLE_VA_NOSLEEP
+            value: "1"
           resources:
             limits:
               cpu: 300m
